Update postgresql playbook

--- a/postgresql.yml
+++ b/postgresql.yml
@@ -15,3 +15,24 @@
     with_items:
       - libpq-dev
       - postgresql
+
+  - name: install ansible postgresql dependencies
+    pip:
+      name: psycopg2
+
+  - name: get the username running the script
+    command: whoami
+    register: host_username
+    become: no
+
+  - name: set up default postgresql user
+    postgresql_user:
+      name: "{{ host_username.stdout }}"
+      password: password
+      role_attr_flags: SUPERUSER
+    become_user: postgres
+
+  - name: set up default postgresql database
+    postgresql_db:
+      name: "{{ host_username.stdout }}"
+    become_user: postgres
