--- a/nodejs.yml
+++ b/nodejs.yml
@@ -2,14 +2,14 @@
 - hosts: all
   become: yes
   tasks:
-  - name: add nodejs apt repository signing keys
-    apt_key: url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key
+    - name: add nodejs apt repository signing keys
+      apt_key: url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key
 
-  - name: add nodejs apt repositories
-    apt_repository: repo="{{ item }}" update_cache=yes
-    with_items:
-      - deb https://deb.nodesource.com/node_7.x jessie main
-      - deb-src https://deb.nodesource.com/node_7.x jessie main
+    - name: add nodejs apt repositories
+      apt_repository: repo="{{ item }}" update_cache=yes
+      with_items:
+        - deb https://deb.nodesource.com/node_7.x {{ ansible_distribution_release }} main
+        - deb-src https://deb.nodesource.com/node_7.x {{ ansible_distribution_release }} main
 
-  - name: install nodejs package
-    apt: name=nodejs
+    - name: install nodejs package
+      apt: name=nodejs
